Derive CXXFLAGS from CFLAGS.
To avoid having to duplicate all the flags passed to CC also for CXX, also
apply CFLAGS to the C++ compiler. Not all of CFLAGS might be applicable
to C++ code, however, so construct CXXFLAGS from CFLAGS, by testing each
flag to see if it also works with CXX.

By default, this adds -Wall and a bunch of other flags to the C++ command
line.

--- a/configure.in
+++ b/configure.in
@@ -290,6 +290,19 @@ esac
 
 AC_PROG_CC([$pgac_cc_list])
 
+#
+# C++ compiler
+#
+#
+# AC_PROG_CXX will add "-g -O2" to CXXFLAGS, if CXXFLAGS was not already set.
+# We don't want that, because we derive CXXFLAGS from CFLAGS later on. Set
+# CXXFLAGS to an empty string explicitly before invoking AC_PROG_CXX, to
+# avoid that.
+ac_save_CXXFLAGS=$CXXFLAGS
+CXXFLAGS=""
+AC_PROG_CXX
+CXXFLAGS=$ac_save_CXXFLAGS
+
 # Check if it's Intel's compiler, which (usually) pretends to be gcc,
 # but has idiosyncrasies of its own.  We assume icc will define
 # __INTEL_COMPILER regardless of CFLAGS.
@@ -448,7 +461,6 @@ if test "$GCC" = yes -a "$ICC" = no; then
   # Disable loop optimizations that get confused by variable-length struct
   # declarations in gcc 4.8+
   PGAC_PROG_CC_CFLAGS_OPT([-fno-aggressive-loop-optimizations])
-  PGAC_PROG_CXX_CXXFLAGS_OPT([-fno-aggressive-loop-optimizations])
 
   # Silence compiler warnings that you get with modern versions of GCC.
   # All of these warnings have been fixed in later versions of PostgreSQL,
@@ -517,6 +529,28 @@ AC_TRY_COMPILE([], [@%:@ifdef __FAST_MATH__
 choke me
 @%:@endif], [], [AC_MSG_ERROR([do not put -ffast-math in CFLAGS])])
 fi
+
+# Since PostgreSQL is written in pure C, all the tests in this file
+# add necessary flags to CFLAGS only. We have some C++ code in
+# src/backend/gpopt, so we must also configure CXXFLAGS in the same way.
+# However, some CFLAGS might not be applicable to C++, so we cannot just
+# use CFLAGS as is with the C++ compiler. Derive CXXFLAGS from CFLAGS,
+# by picking those CFLAGS that also work with the C++ compiler.
+#
+# This assumes that the C++ compiler is roughly compatible with the C
+# compiler, and accepts the same flags. While we test that each flag works
+# with the C++ compiler, we would miss any flags that we would need for
+# the C++ compiler, but not for the C compiler. For example, if you tried
+# to use CC=clang and CXX=g++, we would not know to apply flags that are
+# needed for g++, but not by clang. So don't mix and match compiler
+# families!
+
+# Loop over all options in CFLAGS, and check if they also work with CXX.
+# Add to CXXFLAGS those that do.
+for cflag in $CFLAGS; do
+  PGAC_PROG_CXX_CXXFLAGS_OPT($cflag)
+done
+
 
 AC_PROG_CPP
 AC_SUBST(GCC)
