Test gpexpand in pulse, triggered from pipeline
Signed-off-by: Larry Hamel <lhamel@pivotal.io>

--- a/concourse/pipelines/pipeline.yml
+++ b/concourse/pipelines/pipeline.yml
@@ -519,6 +519,23 @@ jobs:
       <<: *pulse_properties
       PULSE_PROJECT_NAME: "GPDB-kerberos_smoke"
 
+- name: MU_gpexpand
+  plan:
+  - aggregate: *pulse_trigger_resource
+  - task: trigger_pulse
+    tags: ["gpdb5-pulse-worker"]
+    file: gpdb_src/ci/pulse/api/trigger_pulse.yml
+    input_mapping: *input_mappings
+    params:
+      <<: *pulse_properties
+      PULSE_PROJECT_NAME: "GPDB-gpexpand"
+  - task: monitor_pulse
+    tags: ["gpdb5-pulse-worker"]
+    file: gpdb_src/ci/pulse/api/monitor_pulse.yml
+    params:
+      <<: *pulse_properties
+      PULSE_PROJECT_NAME: "GPDB-gpexpand"
+
 - name: cs-uao-regression
   plan:
   - aggregate: *pulse_trigger_resource
