Reorganize and add to gitignore patterns
Signed-off-by: Larry Hamel <lhamel@pivotal.io>
Signed-off-by: Chumki Roy <croy@pivotal.io>
Signed-off-by: C.J. Jameson <cjameson@pivotal.io>

--- a/.gitignore
+++ b/.gitignore
@@ -27,11 +27,6 @@ lib*dll.defautom4te.cache
 **/tags
 *.pyc
 **/vagrant-local.yml
-
-# Local excludes in root directory
-/GNUmakefile
-/config.log
-/config.status
 a.out.dSYM
 confdefs.h
 conftest.c
@@ -40,16 +35,15 @@ config.cache
 config.status.lineno
 autom4te.cache
 configure.lineno
-.config.log.swp
 Debug
 Release
 pgsql.sln
 cscope.*
 build.sh
-gpdb-doc/book/final_app
-gpdb-doc/book/output
 
-# Added
-*.swp
+# Local excludes in root directory
+/GNUmakefile
+/config.log
+/config.status
+/VERSION
 
-VERSION
