Use a parallelized pulse project for gpexpand
Signed-off-by: Larry Hamel <lhamel@pivotal.io>

--- a/concourse/pipelines/pipeline.yml
+++ b/concourse/pipelines/pipeline.yml
@@ -528,13 +528,13 @@ jobs:
     input_mapping: *input_mappings
     params:
       <<: *pulse_properties
-      PULSE_PROJECT_NAME: "GPDB-gpexpand"
+      PULSE_PROJECT_NAME: "GPDB-gpexpand-parallel"
   - task: monitor_pulse
     tags: ["gpdb5-pulse-worker"]
     file: gpdb_src/ci/pulse/api/monitor_pulse.yml
     params:
       <<: *pulse_properties
-      PULSE_PROJECT_NAME: "GPDB-gpexpand"
+      PULSE_PROJECT_NAME: "GPDB-gpexpand-parallel"
 
 - name: cs-uao-regression
   plan:
