PR Pipeline: run ICW only if both compiles pass
- The "custom" compile typically takes a few minutes less than the main
  compile, so this won't delay feedback
- If the custom compile goes red, it will issue a failure to the github
  hook. But without this change, the ICW would still run and possibly
  issue a later "success" to github.

Signed-off-by: Marbin Tan <mtan@pivotal.io>

--- a/concourse/pipelines/pr_pipeline.yml
+++ b/concourse/pipelines/pr_pipeline.yml
@@ -125,7 +125,9 @@ jobs:
     plan:
     - aggregate:
       - get: gpdb_pr
-        passed: [compile_gpdb_centos6]
+        passed:
+        - compile_gpdb_centos6
+        - compile_gpdb_custom_config_centos6
       - get: bin_gpdb
         resource: bin_gpdb_centos
         passed: [compile_gpdb_centos6]
