--- a/concourse/pipelines/pipeline.yml
+++ b/concourse/pipelines/pipeline.yml
@@ -612,31 +612,35 @@ jobs:
       resource: gpdb_src_behave_tarball
       passed: [gpdb_rc_packaging_centos]
 
+- name: mu-gatekeeper
+  plan:
+  - aggregate: *pulse_gatekeeper_resources
+
 # Stage 5: Trigger and monitor pulse project
 
 - name: MU_netbackup76
   plan:
-  - aggregate: &pulse_trigger_resource
+  - aggregate: &pulse_trigger_mu_resources
     - get: gpdb_src
       params: {submodules: none}
       tags: ["gpdb5-pulse-worker"]
-      passed: [gpdb_rc_packaging_centos]
+      passed: [mu-gatekeeper]
       trigger: true
     - get: gpdb_src_tinc_tarball
       tags: ["gpdb5-pulse-worker"]
-      passed: [gpdb_rc_packaging_centos]
+      passed: [mu-gatekeeper]
     - get: installer_rhel6_gpdb_rc
       tags: ["gpdb5-pulse-worker"]
       resource: installer_rhel6_gpdb_rc
-      passed: [gpdb_rc_packaging_centos]
+      passed: [mu-gatekeeper]
     - get: qautils_rhel6_tarball
       tags: ["gpdb5-pulse-worker"]
       resource: qautils_rhel6_tarball
-      passed: [gpdb_rc_packaging_centos]
+      passed: [mu-gatekeeper]
     - get: gpdb_src_behave_tarball
       tags: ["gpdb5-pulse-worker"]
       resource: gpdb_src_behave_tarball
-      passed: [gpdb_rc_packaging_centos]
+      passed: [mu-gatekeeper]
   - task: trigger_pulse
     tags: ["gpdb5-pulse-worker"]
     file: gpdb_src/ci/pulse/api/trigger_pulse.yml
@@ -657,7 +661,7 @@ jobs:
 
 - name: MU_backup-restore
   plan:
-  - aggregate: *pulse_trigger_resource
+  - aggregate: *pulse_trigger_mu_resources
   - task: trigger_pulse
     tags: ["gpdb5-pulse-worker"]
     file: gpdb_src/ci/pulse/api/trigger_pulse.yml
@@ -674,7 +678,7 @@ jobs:
 
 - name: MU_gpcheckcat
   plan:
-  - aggregate: *pulse_trigger_resource
+  - aggregate: *pulse_trigger_mu_resources
   - task: trigger_pulse
     tags: ["gpdb5-pulse-worker"]
     file: gpdb_src/ci/pulse/api/trigger_pulse.yml
@@ -691,7 +695,7 @@ jobs:
 
 - name: MU_gprecoverseg
   plan:
-  - aggregate: *pulse_trigger_resource
+  - aggregate: *pulse_trigger_mu_resources
   - task: trigger_pulse
     tags: ["gpdb5-pulse-worker"]
     file: gpdb_src/ci/pulse/api/trigger_pulse.yml
@@ -708,7 +712,7 @@ jobs:
 
 - name: MU_kerberos-smoke
   plan:
-  - aggregate: *pulse_trigger_resource
+  - aggregate: *pulse_trigger_mu_resources
   - task: trigger_pulse
     tags: ["gpdb5-pulse-worker"]
     file: gpdb_src/ci/pulse/api/trigger_pulse.yml
@@ -725,7 +729,7 @@ jobs:
 
 - name: MU_gpexpand
   plan:
-  - aggregate: *pulse_trigger_resource
+  - aggregate: *pulse_trigger_mu_resources
   - task: trigger_pulse
     tags: ["gpdb5-pulse-worker"]
     file: gpdb_src/ci/pulse/api/trigger_pulse.yml
@@ -742,7 +746,7 @@ jobs:
 
 - name: MU_gptransfer-43x-to-5x
   plan:
-  - aggregate: *pulse_trigger_resource
+  - aggregate: *pulse_trigger_mu_resources
   - task: trigger_pulse
     tags: ["gpdb5-pulse-worker"]
     file: gpdb_src/ci/pulse/api/trigger_pulse.yml
@@ -759,7 +763,7 @@ jobs:
 
 - name: MU_gptransfer-5x-to-5x
   plan:
-  - aggregate: *pulse_trigger_resource
+  - aggregate: *pulse_trigger_mu_resources
   - task: trigger_pulse
     tags: ["gpdb5-pulse-worker"]
     file: gpdb_src/ci/pulse/api/trigger_pulse.yml
@@ -903,7 +907,27 @@ jobs:
 
 - name: mpp_interconnect
   plan:
-  - aggregate: *pulse_trigger_resource
+  - aggregate: &pulse_trigger_resource
+    - get: gpdb_src
+      params: {submodules: none}
+      tags: ["gpdb5-pulse-worker"]
+      passed: [gpdb_rc_packaging_centos]
+      trigger: true
+    - get: gpdb_src_tinc_tarball
+      tags: ["gpdb5-pulse-worker"]
+      passed: [gpdb_rc_packaging_centos]
+    - get: installer_rhel6_gpdb_rc
+      tags: ["gpdb5-pulse-worker"]
+      resource: installer_rhel6_gpdb_rc
+      passed: [gpdb_rc_packaging_centos]
+    - get: qautils_rhel6_tarball
+      tags: ["gpdb5-pulse-worker"]
+      resource: qautils_rhel6_tarball
+      passed: [gpdb_rc_packaging_centos]
+    - get: gpdb_src_behave_tarball
+      tags: ["gpdb5-pulse-worker"]
+      resource: gpdb_src_behave_tarball
+      passed: [gpdb_rc_packaging_centos]
   - task: trigger_pulse
     tags: ["gpdb5-pulse-worker"]
     file: gpdb_src/ci/pulse/api/trigger_pulse.yml
