--- a/concourse/pipelines/pipeline.yml
+++ b/concourse/pipelines/pipeline.yml
@@ -585,7 +585,34 @@ jobs:
     - put: gpdb_src_behave_tarball
       params:
         file: packaged_gpdb_src_behave/greenplum-db-4.3.99.0-behave.tar.gz
-# Stage 3: Trigger and monitor pulse project
+
+# Stage 4: "Gatekeep" and organize longer-running or resource-intensive tests, typically in pulse
+
+- name: cs-gatekeeper
+  plan:
+  - aggregate: &pulse_gatekeeper_resources
+    - get: gpdb_src
+      params: {submodules: none}
+      tags: ["gpdb5-pulse-worker"]
+      passed: [gpdb_rc_packaging_centos]
+      trigger: true
+    - get: gpdb_src_tinc_tarball
+      tags: ["gpdb5-pulse-worker"]
+      passed: [gpdb_rc_packaging_centos]
+    - get: installer_rhel6_gpdb_rc
+      tags: ["gpdb5-pulse-worker"]
+      resource: installer_rhel6_gpdb_rc
+      passed: [gpdb_rc_packaging_centos]
+    - get: qautils_rhel6_tarball
+      tags: ["gpdb5-pulse-worker"]
+      resource: qautils_rhel6_tarball
+      passed: [gpdb_rc_packaging_centos]
+    - get: gpdb_src_behave_tarball
+      tags: ["gpdb5-pulse-worker"]
+      resource: gpdb_src_behave_tarball
+      passed: [gpdb_rc_packaging_centos]
+
+# Stage 5: Trigger and monitor pulse project
 
 - name: MU_netbackup76
   plan:
@@ -750,7 +777,27 @@ jobs:
 
 - name: cs-pg-two-phase
   plan:
-  - aggregate: *pulse_trigger_resource
+  - aggregate: &pulse_trigger_cs_resources
+    - get: gpdb_src
+      params: {submodules: none}
+      tags: ["gpdb5-pulse-worker"]
+      passed: [cs-gatekeeper]
+      trigger: true
+    - get: gpdb_src_tinc_tarball
+      tags: ["gpdb5-pulse-worker"]
+      passed: [cs-gatekeeper]
+    - get: installer_rhel6_gpdb_rc
+      tags: ["gpdb5-pulse-worker"]
+      resource: installer_rhel6_gpdb_rc
+      passed: [cs-gatekeeper]
+    - get: qautils_rhel6_tarball
+      tags: ["gpdb5-pulse-worker"]
+      resource: qautils_rhel6_tarball
+      passed: [cs-gatekeeper]
+    - get: gpdb_src_behave_tarball
+      tags: ["gpdb5-pulse-worker"]
+      resource: gpdb_src_behave_tarball
+      passed: [cs-gatekeeper]
   - task: trigger_pulse
     tags: ["gpdb5-pulse-worker"]
     file: gpdb_src/ci/pulse/api/trigger_pulse.yml
@@ -767,7 +814,7 @@ jobs:
 
 - name: cs-walrepl-multinode
   plan:
-  - aggregate: *pulse_trigger_resource
+  - aggregate: *pulse_trigger_cs_resources
   - task: trigger_pulse
     tags: ["gpdb5-pulse-worker"]
     file: gpdb_src/ci/pulse/api/trigger_pulse.yml
@@ -784,7 +831,7 @@ jobs:
 
 - name: cs-fts
   plan:
-  - aggregate: *pulse_trigger_resource
+  - aggregate: *pulse_trigger_cs_resources
   - task: trigger_pulse
     tags: ["gpdb5-pulse-worker"]
     file: gpdb_src/ci/pulse/api/trigger_pulse.yml
@@ -801,7 +848,7 @@ jobs:
 
 - name: cs-storage
   plan:
-  - aggregate: *pulse_trigger_resource
+  - aggregate: *pulse_trigger_cs_resources
   - task: trigger_pulse
     tags: ["gpdb5-pulse-worker"]
     file: gpdb_src/ci/pulse/api/trigger_pulse.yml
@@ -824,22 +871,22 @@ jobs:
     - get: gpdb_src
       params: {submodules: none}
       tags: ["gpdb5-pulse-worker"]
-      passed: [gpdb_rc_packaging_centos]
+      passed: [cs-gatekeeper]
     - get: gpdb_src_tinc_tarball
       tags: ["gpdb5-pulse-worker"]
-      passed: [gpdb_rc_packaging_centos]
+      passed: [cs-gatekeeper]
     - get: installer_rhel6_gpdb_rc
       tags: ["gpdb5-pulse-worker"]
       resource: installer_rhel6_gpdb_rc
-      passed: [gpdb_rc_packaging_centos]
+      passed: [cs-gatekeeper]
     - get: qautils_rhel6_tarball
       tags: ["gpdb5-pulse-worker"]
       resource: qautils_rhel6_tarball
-      passed: [gpdb_rc_packaging_centos]
+      passed: [cs-gatekeeper]
     - get: gpdb_src_behave_tarball
       tags: ["gpdb5-pulse-worker"]
       resource: gpdb_src_behave_tarball
-      passed: [gpdb_rc_packaging_centos]
+      passed: [cs-gatekeeper]
   - task: trigger_pulse
     tags: ["gpdb5-pulse-worker"]
     file: gpdb_src/ci/pulse/api/trigger_pulse.yml
