--- a/concourse/pipelines/pipeline.yml
+++ b/concourse/pipelines/pipeline.yml
@@ -616,6 +616,18 @@ jobs:
   plan:
   - aggregate: *pulse_gatekeeper_resources
 
+- name: unite-gatekeeper
+  plan:
+  - aggregate: *pulse_gatekeeper_resources
+
+- name: qp-gatekeeper
+  plan:
+  - aggregate: *pulse_gatekeeper_resources
+
+- name: mpp-gatekeeper
+  plan:
+  - aggregate: *pulse_gatekeeper_resources
+
 # Stage 5: Trigger and monitor pulse project
 
 - name: MU_netbackup76
@@ -907,27 +919,24 @@ jobs:
 
 - name: mpp_interconnect
   plan:
-  - aggregate: &pulse_trigger_resource
+  - aggregate:
     - get: gpdb_src
       params: {submodules: none}
       tags: ["gpdb5-pulse-worker"]
-      passed: [gpdb_rc_packaging_centos]
+      passed: [mpp-gatekeeper]
       trigger: true
     - get: gpdb_src_tinc_tarball
       tags: ["gpdb5-pulse-worker"]
-      passed: [gpdb_rc_packaging_centos]
+      passed: [mpp-gatekeeper]
     - get: installer_rhel6_gpdb_rc
       tags: ["gpdb5-pulse-worker"]
-      resource: installer_rhel6_gpdb_rc
-      passed: [gpdb_rc_packaging_centos]
+      passed: [mpp-gatekeeper]
     - get: qautils_rhel6_tarball
       tags: ["gpdb5-pulse-worker"]
-      resource: qautils_rhel6_tarball
-      passed: [gpdb_rc_packaging_centos]
+      passed: [mpp-gatekeeper]
     - get: gpdb_src_behave_tarball
       tags: ["gpdb5-pulse-worker"]
-      resource: gpdb_src_behave_tarball
-      passed: [gpdb_rc_packaging_centos]
+      passed: [mpp-gatekeeper]
   - task: trigger_pulse
     tags: ["gpdb5-pulse-worker"]
     file: gpdb_src/ci/pulse/api/trigger_pulse.yml
@@ -944,7 +953,24 @@ jobs:
 
 - name: unite_ccle_gpdb5
   plan:
-  - aggregate: *pulse_trigger_resource
+  - aggregate:
+    - get: gpdb_src
+      params: {submodules: none}
+      tags: ["gpdb5-pulse-worker"]
+      passed: [unite-gatekeeper]
+      trigger: true
+    - get: gpdb_src_tinc_tarball
+      tags: ["gpdb5-pulse-worker"]
+      passed: [unite-gatekeeper]
+    - get: installer_rhel6_gpdb_rc
+      tags: ["gpdb5-pulse-worker"]
+      passed: [unite-gatekeeper]
+    - get: qautils_rhel6_tarball
+      tags: ["gpdb5-pulse-worker"]
+      passed: [unite-gatekeeper]
+    - get: gpdb_src_behave_tarball
+      tags: ["gpdb5-pulse-worker"]
+      passed: [unite-gatekeeper]
   - task: trigger_pulse
     tags: ["gpdb5-pulse-worker"]
     file: gpdb_src/ci/pulse/api/trigger_pulse.yml
@@ -961,7 +987,24 @@ jobs:
 
 - name: QP_memory-accounting
   plan:
-  - aggregate: *pulse_trigger_resource
+  - aggregate:
+    - get: gpdb_src
+      params: {submodules: none}
+      tags: ["gpdb5-pulse-worker"]
+      passed: [qp-gatekeeper]
+      trigger: true
+    - get: gpdb_src_tinc_tarball
+      tags: ["gpdb5-pulse-worker"]
+      passed: [qp-gatekeeper]
+    - get: installer_rhel6_gpdb_rc
+      tags: ["gpdb5-pulse-worker"]
+      passed: [qp-gatekeeper]
+    - get: qautils_rhel6_tarball
+      tags: ["gpdb5-pulse-worker"]
+      passed: [qp-gatekeeper]
+    - get: gpdb_src_behave_tarball
+      tags: ["gpdb5-pulse-worker"]
+      passed: [qp-gatekeeper]
   - task: trigger_pulse
     tags: ["gpdb5-pulse-worker"]
     file: gpdb_src/ci/pulse/api/trigger_pulse.yml
@@ -980,7 +1023,7 @@ jobs:
   plan:
   - aggregate:
     - get: gpdb_src
-      passed: [gpdb_rc_packaging_centos]
+      passed: [qp-gatekeeper]
       trigger: true
     - get: bin_gpdb
       passed: [gpdb_rc_packaging_centos]
@@ -999,7 +1042,7 @@ jobs:
   plan:
   - aggregate:
     - get: gpdb_src
-      passed: [gpdb_rc_packaging_centos]
+      passed: [unite-gatekeeper]
       trigger: true
     - get: bin_gpdb
       passed: [gpdb_rc_packaging_centos]
