Add ignores for python compiled files
Signed-off-by: Marbin Tan <mtan@pivotal.io>

--- a/gpMgmt/bin/.gitignore
+++ b/gpMgmt/bin/.gitignore
@@ -1,5 +1,37 @@
 ext
+/analyzedbc
+/gp_dfc
+/gpactivatestandbyc
+/gpaddmirrorsc
+/gpbitmapreindexc
 /gpcheckcatc
+/gpcheckperfc
+/gpchecksubnetcfgc
+/gpconfigc
 /gpcrondumpc
+/gpdbrestorec
+/gpdebugc
+/gpdeletesystemc
 /gpexpandc
+/gpfaultinjectorc
+/gpfilespacec
+/gpinitstandbyc
+/gpkillc
+/gplogfilterc
+/gpmigrator_mirrorc
+/gpmigratorc
+/gpmovemirrorsc
+/gppkgc
+/gprecoversegc
+/gpreloadc
+/gpscpc
+/gpsdc
+/gpseginstallc
+/gpssh-exkeysc
+/gpsshc
+/gpstartc
+/gpstatec
+/gpstopc
+/gpsys1c
 /gptransferc
+/minireproc
