Introduce `sync-resource` to the PR pipeline
In order to ensure all PRs are run through our pipeline, we need to use
`version: every`, but that combined with the fan-out/fan-in is buggy in
concourse resulting in stalled PRs.

We followed the workaround posted here: https://github.com/concourse/concourse/issues/736

The workaround uses a time reseource to work as a coordinator to ensure
our strategy (`version: every` and fin-out/fan-in) will work correctly. Supposedly,
once the bug is fixed, we'll be able to remove the time resource and the
pipeline should continue to work as expected.

Signed-off-by: Tushar Dadlani <tdadlani@pivotal.io>

--- a/concourse/pipelines/pr_pipeline.yml
+++ b/concourse/pipelines/pr_pipeline.yml
@@ -67,14 +67,43 @@ resources:
       secret_access_key: {{bucket-secret-access-key}}
       versioned_file: gpdb_pr/gpdb_artifacts/bin_gpdb.tar.gz
 
+  - name: sync-resource
+    type: time
+    source: {interval: 24h} # doesn't matter, but something has to be there
+
 jobs:
-  - name: compile_gpdb_centos6
+  - name: compile_gpdb_custom_config_centos6
+    public: true
     plan:
     - aggregate:
       - get: gpdb_pr
         version: every
         trigger: true
-      - get: gpaddon_src 
+      - get: centos-gpdb-dev-6
+    - task: compile_gpdb
+      file: gpdb_pr/concourse/tasks/compile_gpdb_custom_config.yml
+      image: centos-gpdb-dev-6
+      input_mapping:
+        gpdb_src: gpdb_pr
+      on_failure:
+        put: gpdb_pr
+        params:
+          path: gpdb_pr
+          status: failure
+    - put: sync-resource
+
+  - name: compile_gpdb_centos6
+    plan:
+    - aggregate:
+      - get: sync-resource
+        version: every
+        trigger: true
+        passed: [compile_gpdb_custom_config_centos6]
+      - get: gpdb_pr
+        version: every
+        trigger: true
+        passed: [compile_gpdb_custom_config_centos6]
+      - get: gpaddon_src
       - get: centos-gpdb-dev-6
     - put: gpdb_pr
       params:
@@ -98,39 +127,23 @@ jobs:
         params:
           path: gpdb_pr
           status: failure
-    - aggregate:
-      - put: bin_gpdb_centos
-        params:
-          file: gpdb_artifacts/bin_gpdb.tar.gz
-
-  - name: compile_gpdb_custom_config_centos6
-    public: true
-    plan:
-    - aggregate:
-      - get: gpdb_pr
-        trigger: true
-      - get: centos-gpdb-dev-6
-    - task: compile_gpdb
-      file: gpdb_pr/concourse/tasks/compile_gpdb_custom_config.yml
-      image: centos-gpdb-dev-6
-      input_mapping:
-        gpdb_src: gpdb_pr
-      on_failure:
-        put: gpdb_pr
-        params:
-          path: gpdb_pr
-          status: failure
+    - put: bin_gpdb_centos
+      params:
+        file: gpdb_artifacts/bin_gpdb.tar.gz
+    - put: sync-resource
 
   # Stage 2: Run tests
   - name: icw_planner_centos6
     plan:
     - aggregate:
-      - get: gpdb_pr
-        passed:
-        - compile_gpdb_centos6
-        - compile_gpdb_custom_config_centos6
+      - get: sync-resource
         version: every
         trigger: true
+        passed: [compile_gpdb_centos6]
+      - get: gpdb_pr
+        version: every
+        trigger: true
+        passed: [compile_gpdb_centos6]
       - get: bin_gpdb
         resource: bin_gpdb_centos
         passed: [compile_gpdb_centos6]
@@ -150,16 +163,19 @@ jobs:
         params:
           path: gpdb_pr
           status: failure
+    - put: sync-resource
 
   - name: icw_gporca_codegen_centos6
     plan:
     - aggregate:
-      - get: gpdb_pr
-        passed:
-        - compile_gpdb_centos6
-        - compile_gpdb_custom_config_centos6
+      - get: sync-resource
         version: every
         trigger: true
+        passed: [compile_gpdb_centos6]
+      - get: gpdb_pr
+        version: every
+        trigger: true
+        passed: [compile_gpdb_centos6]
       - get: bin_gpdb
         resource: bin_gpdb_centos
         passed: [compile_gpdb_centos6]
@@ -179,16 +195,19 @@ jobs:
         params:
           path: gpdb_pr
           status: failure
+    - put: sync-resource
 
   - name: MU_check_centos
     plan:
     - aggregate:
-      - get: gpdb_pr
-        passed:
-        - compile_gpdb_centos6
-        - compile_gpdb_custom_config_centos6
+      - get: sync-resource
         version: every
         trigger: true
+        passed: [compile_gpdb_centos6]
+      - get: gpdb_pr
+        version: every
+        trigger: true
+        passed: [compile_gpdb_centos6]
       - get: bin_gpdb
         resource: bin_gpdb_centos
         passed: [compile_gpdb_centos6]
@@ -205,31 +224,47 @@ jobs:
         params:
           path: gpdb_pr
           status: failure
+    - put: sync-resource
 
   - name: report_pr_success
     plan:
     - aggregate:
-      - get: gpdb_pr
+      - get: sync-resource
+        version: every
+        trigger: true
         passed:
         - icw_planner_centos6
         - icw_gporca_codegen_centos6
         - MU_check_centos
+      - get: gpdb_pr
+        version: every
         trigger: true
+        passed:
+        - icw_planner_centos6
+        - icw_gporca_codegen_centos6
+        - MU_check_centos
     - put: gpdb_pr
       params:
         path: gpdb_pr
         status: success
+    - put: sync-resource
 
   # Stage 3: Packaging
   - name: gpdb_rc_packaging_centos
     plan:
     - aggregate:
-      - get: gpdb_pr
+      - get: sync-resource
+        version: every
+        trigger: true
         passed:
         - icw_planner_centos6
         - MU_check_centos
+      - get: gpdb_pr
         version: every
         trigger: true
+        passed:
+        - icw_planner_centos6
+        - MU_check_centos
       - get: bin_gpdb
         resource: bin_gpdb_centos
         passed:
@@ -266,3 +301,4 @@ jobs:
       - put: qautils_rhel6_tarball
         params:
           file: rc_bin_gpdb/QAUtils-rhel6-x86_64.tar.gz
+    - put: sync-resource
