--- a/concourse/pipelines/pipeline.yml
+++ b/concourse/pipelines/pipeline.yml
@@ -174,7 +174,7 @@ resources:
     start: 4:00 AM
     stop: 5:00 AM
 
-- name: nightly-trigger-pulse
+- name: nightly-trigger
   type: time
   source:
     location: America/Los_Angeles
@@ -538,9 +538,9 @@ jobs:
   - aggregate:
     - get: gpdb_src
       passed: [compile_gpdb_centos6]
-      trigger: true
     - get: bin_gpdb
       passed: [compile_gpdb_centos6]
+      trigger: true
       resource: bin_gpdb_centos6
     - get: centos-gpdb-dev-6
   - task: regression_tests_gphdfs
@@ -700,12 +700,13 @@ jobs:
 
 - name: MU_netbackup76
   plan:
-  - aggregate: &post_packaging_gets_trigger_true
+  - get: nightly-trigger
+    trigger: true
+  - aggregate: &post_packaging_gets_trigger_false
     - get: gpdb_src
       params: {submodules: none}
       tags: ["gpdb5-pulse-worker"]
       passed: [gpdb_rc_packaging_centos]
-      trigger: true
     - get: gpdb_src_tinc_tarball
       tags: ["gpdb5-pulse-worker"]
       passed: [gpdb_rc_packaging_centos]
@@ -738,7 +739,24 @@ jobs:
 
 - name: MU_backup-restore
   plan:
-  - aggregate: *post_packaging_gets_trigger_true
+  - aggregate: &post_packaging_gets_trigger_true
+    - get: gpdb_src
+      params: {submodules: none}
+      tags: ["gpdb5-pulse-worker"]
+      passed: [gpdb_rc_packaging_centos]
+      trigger: true
+    - get: gpdb_src_tinc_tarball
+      tags: ["gpdb5-pulse-worker"]
+      passed: [gpdb_rc_packaging_centos]
+    - get: installer_rhel6_gpdb_rc
+      tags: ["gpdb5-pulse-worker"]
+      passed: [gpdb_rc_packaging_centos]
+    - get: qautils_rhel6_tarball
+      tags: ["gpdb5-pulse-worker"]
+      passed: [gpdb_rc_packaging_centos]
+    - get: gpdb_src_behave_tarball
+      tags: ["gpdb5-pulse-worker"]
+      passed: [gpdb_rc_packaging_centos]
   - task: trigger_pulse
     tags: ["gpdb5-pulse-worker"]
     file: gpdb_src/ci/pulse/api/trigger_pulse.yml
@@ -806,7 +824,9 @@ jobs:
 
 - name: MU_gpexpand
   plan:
-  - aggregate: *post_packaging_gets_trigger_true
+  - get: nightly-trigger
+    trigger: true
+  - aggregate: *post_packaging_gets_trigger_false
   - task: trigger_pulse
     tags: ["gpdb5-pulse-worker"]
     file: gpdb_src/ci/pulse/api/trigger_pulse.yml
@@ -823,7 +843,9 @@ jobs:
 
 - name: MU_gptransfer-43x-to-5x
   plan:
-  - aggregate: *post_packaging_gets_trigger_true
+  - get: nightly-trigger
+    trigger: true
+  - aggregate: *post_packaging_gets_trigger_false
   - task: trigger_pulse
     tags: ["gpdb5-pulse-worker"]
     file: gpdb_src/ci/pulse/api/trigger_pulse.yml
@@ -892,28 +914,9 @@ jobs:
 
 - name: cs-aoco-compression
   plan:
-  - get: nightly-trigger-pulse
+  - get: nightly-trigger
     trigger: true
-  - aggregate:
-    - get: gpdb_src
-      params: {submodules: none}
-      tags: ["gpdb5-pulse-worker"]
-      passed: [gpdb_rc_packaging_centos]
-    - get: gpdb_src_tinc_tarball
-      tags: ["gpdb5-pulse-worker"]
-      passed: [gpdb_rc_packaging_centos]
-    - get: installer_rhel6_gpdb_rc
-      tags: ["gpdb5-pulse-worker"]
-      resource: installer_rhel6_gpdb_rc
-      passed: [gpdb_rc_packaging_centos]
-    - get: qautils_rhel6_tarball
-      tags: ["gpdb5-pulse-worker"]
-      resource: qautils_rhel6_tarball
-      passed: [gpdb_rc_packaging_centos]
-    - get: gpdb_src_behave_tarball
-      tags: ["gpdb5-pulse-worker"]
-      resource: gpdb_src_behave_tarball
-      passed: [gpdb_rc_packaging_centos]
+  - aggregate: *post_packaging_gets_trigger_false
   - task: trigger_pulse
     tags: ["gpdb5-pulse-worker"]
     file: gpdb_src/ci/pulse/api/trigger_pulse.yml
@@ -947,7 +950,9 @@ jobs:
 
 - name: unite_ccle_gpdb5
   plan:
-  - aggregate: *post_packaging_gets_trigger_true
+  - get: nightly-trigger
+    trigger: true
+  - aggregate: *post_packaging_gets_trigger_false
   - task: trigger_pulse
     tags: ["gpdb5-pulse-worker"]
     file: gpdb_src/ci/pulse/api/trigger_pulse.yml
