Use packages's gpcloud to test
Without this commit, test scripts will re-compile gpcloud anyway, better
to use the one from package instead in the main pipeline.

--- a/concourse/pipelines/pipeline.yml
+++ b/concourse/pipelines/pipeline.yml
@@ -393,6 +393,7 @@ jobs:
     image: centos-gpdb-dev-6
     params:
       s3conf: {{s3_configuration_file}}
+      overwrite_gpcloud: false
       TARGET_OS: centos
       TARGET_OS_VERSION: 6
 
