Add optimizer functional tests [#138020087]

--- a/src/test/tinc/Makefile
+++ b/src/test/tinc/Makefile
@@ -318,6 +318,25 @@ crash_recovery_schema_topology:
 	-p test_crash_recovery_schema_topology.py \
 	-p test_reindex_pg_class.py
 
+# Optimizer functional tests
+optimizer_functional_part1:
+	$(TESTER) $(DISCOVER) \
+	-s partitioning \
+	-s query \
+	-s ddl \
+	-q tags=ORCA \
+	-q tags!=FEATURE_BRANCH_ONLY \
+	-q tags!=dpe
+
+optimizer_functional_part2:
+	$(TESTER) $(DISCOVER) \
+	-s dml \
+	-s functions \
+	-s olap \
+	-q tags=ORCA \
+	-q tags!=FEATURE_BRANCH_ONLY \
+	-q tags!=dpe
+
 runaway_query:
 	$(TESTER) \
 		resource_management.runaway_query.runaway_query_scenario.test_runaway_query_scenario.RQTScenarioTestCase \
