Remove duplicated pl/perl tests and move query to ICG
The TINC plperl91 tests in package/language were mostly duplicates
of what is already tested in src/pl/plperl (especially since sources
were properly synced recently). There were also massive duplication
within the tests of testing every single datatype and various
combinations thereof. This leaves some superusers tests for plperlu
which still holds some value due to them operating with different
users.

--- a/src/pl/plperl/GNUmakefile
+++ b/src/pl/plperl/GNUmakefile
@@ -52,6 +52,8 @@ ifeq ($(shell $(PERL) -V:usemultiplicity), usemultiplicity='define';)
 	REGRESS += plperl_plperlu
 endif
 endif
+# Add Greenplum specific tests
+REGRESS += plperl_gp
 # where to find psql for running the tests
 PSQLDIR = $(bindir)
 
