Add more gpfdist test cases
The old cdbfast test suite had tests for these, looks good, move to ICW.

Signed-off-by: Haozhou Wang <hawang@pivotal.io>
Signed-off-by: Adam Lee <ali@pivotal.io>

--- a/src/bin/gpfdist/regress/Makefile
+++ b/src/bin/gpfdist/regress/Makefile
@@ -3,17 +3,16 @@ include $(top_builddir)/src/Makefile.global
 
 default: installcheck
 
-REGRESS = exttab1 custom_format
+REGRESS = exttab1 custom_format gpfdist2
 PSQLDIR = $(prefix)/bin
+REGRESS_OPTS = --init-file=init_file
 
 installcheck:
-	$(top_builddir)/src/test/regress/pg_regress --psqldir=$(PSQLDIR) --dbname=gpfdist_regression $(REGRESS)
+	$(top_builddir)/src/test/regress/pg_regress --psqldir=$(PSQLDIR) --dbname=gpfdist_regression $(REGRESS) $(REGRESS_OPTS)
 
 clean:
 	rm -rf regression.* sql results expected
 
 distclean: clean
 
-.PHONY: clean distclean
-
-
+.PHONY: installcheck clean distclean
