Move gpload test cases to ICW
The old cdbfast test suite had these, good to move to ICW.

--- a/GNUmakefile.in
+++ b/GNUmakefile.in
@@ -134,6 +134,7 @@ installcheck-world:
 	$(MAKE) -C src/bin/gpfdist installcheck
 	$(MAKE) -C src/interfaces/gppc installcheck
 	$(MAKE) -C src/test/kerberos installcheck
+	$(MAKE) -C gpMgmt/bin installcheck
 	gpcheckcat -A
 
 
